links of docs & dashboard

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,124 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "from typing import List, Dict, Any\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.output_parsers import JsonOutputParser\n",
-    "from pydantic import BaseModel, Field\n",
-    "from langchain_groq import ChatGroq\n",
-    "from langsmith import wrappers, Client\n",
-    "from pydantic import BaseModel, Field\n",
-    "from langchain_groq import ChatGroq\n",
-    "# Load environment variables\n",
-    "load_dotenv()\n",
-    "\n",
-    "LANGCHAIN_API_KEY = os.environ.get(\"LANGCHAIN_API_KEY\")\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = LANGCHAIN_API_KEY\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"evaluation_demo\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# llm = ChatGroq(model=\"mixtral-8x7b-32768\")\n",
-    "\n",
-    "# res = llm.invoke(\"who is the pm of india\")\n",
-    "# print(res)\n",
-    "\n",
-    "\n",
-    "\n",
-    "client = Client()\n",
-    "# openai_client = wrappers.wrap_openai(OpenAI())\n",
-    "\n",
-    "# For other dataset creation methods, see:\n",
-    "# https://docs.smith.langchain.com/evaluation/how_to_guides/manage_datasets_programmatically\n",
-    "# https://docs.smith.langchain.com/evaluation/how_to_guides/manage_datasets_in_application\n",
-    "\n",
-    "# Create inputs and reference outputs\n",
-    "examples = [\n",
-    "  (\n",
-    "      \"Which country is Mount Kilimanjaro located in?\",\n",
-    "      \"Mount Kilimanjaro is located in Tanzania.\",\n",
-    "  ),\n",
-    "  (\n",
-    "      \"What is Earth's lowest point?\",\n",
-    "      \"Earth's lowest point is The Dead Sea.\",\n",
-    "  ),\n",
-    "]\n",
-    "\n",
-    "inputs = [{\"question\": input_prompt} for input_prompt, _ in examples]\n",
-    "outputs = [{\"answer\": output_answer} for _, output_answer in examples]\n",
-    "\n",
-    "# Programmatically create a dataset in LangSmith\n",
-    "dataset = client.create_dataset(\n",
-    "  dataset_name=\"Sample dataset\", description=\"A sample dataset in LangSmith.\"\n",
-    ")\n",
-    "\n",
-    "# Add examples to the dataset\n",
-    "client.create_examples(inputs=inputs, outputs=outputs, dataset_id=dataset.id)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Define the application logic you want to evaluate inside a target function\n",
-    "# The SDK will automatically send the inputs from the dataset to your target function\n",
-    "def target(inputs):\n",
-    "  \n",
-    "    llm = ChatGroq(model=\"mixtral-8x7b-32768\")\n",
-    "    res = llm.invoke(inputs)\n",
-    "\n",
-    "    return res.content\n",
-    "\n",
-    "\n",
-    "# Define output schema for the LLM judge\n",
-    "class Grade(BaseModel):\n",
-    "    score: bool = Field(\n",
-    "        description=\"Boolean that indicates whether the response is accurate relative to the reference answer\"\n",
-    "    )\n",
-    "\n",
-    "def accuracy(outputs: dict, reference_outputs: dict) -> bool:\n",
-    "    # Set up a parser + inject instructions into the prompt template.\n",
-    "    parser = JsonOutputParser(pydantic_object=Grade)\n",
-    "    model = ChatGroq(model=\"mixtral-8x7b-32768\")\n",
-    "    prompt = PromptTemplate(\n",
-    "        template=f\"\"\"Evaluate Student Answer against Ground Truth for conceptual similarity and classify true or false: \n",
-    "        - False: No conceptual match and similarity\n",
-    "        - True: Most or full conceptual match and similarity\n",
-    "        - Key criteria: Concept should match, not exact wording.\n",
-    "\n",
-    "        Ground Truth answer: {reference_outputs[\"answer\"]}\n",
-    "        Student's Answer: {outputs[\"response\"]}\n",
-    "        \"\"\",\n",
-    "        input_variables=[\"query\"],\n",
-    "        partial_variables={\"format_instructions\": parser.get_format_instructions()},\n",
-    "    )\n",
-    "\n",
-    "    chain = prompt | model | parser\n",
-    "\n",
-    "    return chain.invoke()\n",
-    "\n",
-    "\n",
-    "# After running the evaluation, a link will be provided to view the results in langsmith\n",
-    "# experiment_results = client.evaluate_run(\n",
-    "#   target,\n",
-    "#   data=\"Sample dataset\",\n",
-    "#   evaluators=[\n",
-    "#       accuracy,\n",
-    "#       # can add multiple evaluators here\n",
-    "#   ],\n",
-    "#   experiment_prefix=\"first-eval-in-langsmith\",\n",
-    "#   max_concurrency=2,\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# print(experiment_results)"
+    "- Quickstart docs: https://docs.smith.langchain.com/evaluation/tutorials/evaluation\n",
+    "- Langsmith Evaluation Dashboards: https://smith.langchain.com/o/f602a986-7b0f-5e2b-aa00-74708f7af432/datasets/cab1b44f-92cb-4aa0-8b0e-55891dd4271f/compare?selectedSessions=8d9f3ca8-1784-4a3d-95af-75252aac219f%2C45f67b78-78b8-40dd-8134-aee86e870bfc&baseline=8d9f3ca8-1784-4a3d-95af-75252aac219f"
    ]
   },
   {
